--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -27,7 +27,123 @@ h1{
 background: radial-gradient(circle, rgba(63,94,251,1) 19%, rgba(0,107,41,1) 85%);
 }
 .wrapper{
+	max-width: 1170px;
+	margin: 0 auto;
+	height: 100%;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	-moz-flex-direction: column;
+	-ms-flex-direction: column;
+	-o-flex-direction: column;
+	flex-direction: column;
+	justify-content: space-between;
 }
+.section_header{
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	height: 150px;
+	margin-bottom: 100px;
+}
+.section_header h2{
+	font-size: 30px;
+	color: #000;
+	text-transform: uppercase;
+	font-weight: 500;
+}
+.header{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-top: 25px;
+}
+.menu{
+	display: flex;
+	justify-content: space-around;
+}
+.menu li{
+	list-style: none;
+	margin-left: 80px;
+}
+.menu li a{
+	color: #fff;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 22px;
+	font-weight: 500;
+}
+.menu li a:hover{
+	color: darken(#2B4554, 10%);
+}
+.logo img{max-width: 150px;}
+
+/*------- конец шапки ------- */
+.main_text{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: #fff;
+}
+.main_text span{
+	font-size: 25px;
+	text-transform: uppercase;
+}
+.main_text a{
+	color: #fff;
+}
+.main_text a:hover{
+	color: #fff;
+	border: 1px solid #fff;
+	background-color: #0097B9;
+}
+.main_arrow{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 20px;
+}
+.main_arrow a{
+	color: #fff;
+	font-size: 50px;
+	transition: 1s;
+}
+.main_arrow a:hover{
+	color: #0097B9;
+}
+/* -------------преимущества----------------*/
+.advantages_content{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.item{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 70px;
+	transition: 1s;
+}
+.item:hover{
+	transform: scale(1.1);
+}
+.item span{
+	font-size: 25px;
+	color: #000;
+	font-weight: 600;
+	text-transform: uppercase;
+	margin-top: 30px;
+}
+.item i{
+	color: #a0a0a0;
+	font-size: 100px;
+}
+/* -------------каталог----------------*/
 .catalog{
 	background-color: #2B4554;
 }
@@ -99,6 +215,7 @@ background: radial-gradient(circle, rgba(63,94,251,1) 19%, rgba(0,107,41,1) 85%)
 	color: #fff;
 	border: 1px solid #f5f5f5;
 }
+
 .map{
 	position: relative;
 }
@@ -114,6 +231,9 @@ background: radial-gradient(circle, rgba(63,94,251,1) 19%, rgba(0,107,41,1) 85%)
 }
 .card_logo{
 	padding: 40px;
+}
+.card_logo img{
+	max-width: 150px;
 }
 .card_text{
 	padding: 0 20px;
